spacing between two canvas fixed

--- a/Flappy-bird/css/layout.css
+++ b/Flappy-bird/css/layout.css
@@ -7,9 +7,8 @@
 
 canvas{
    float: left;
-   /* margin-top: 50px; */
    background-color: skyblue;
-   margin-left: 300px;
+   margin-left: 50px;
   }
 
 
